<resources>

    <string name="app_name">Java 2 Project 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Java 2 Project 2</string>
    
    
    <string name="main_name">First Name</string>
    <string name="hint_name">John</string>
    <string name="main_last">Last Name</string>
    <string name="hint_last">Doe</string>
    <string name="button_text">Submit</string>
    <string name="phone_num">Phone Number</string>
    <string name="phone_hint1">222</string>
    <string name="phone_hint2">333</string>
    <string name="phone_hint3">4444</string>
    <string name="one">1</string>
    
    
    <string name="second_top">In case I forgot my name</string>
    <string name="first_example">First Name</string>
    <string name="last_example">Last Name</string>
    <string name="call_me">Call Me</string>

</resources>