<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paperbg" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B4226" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/editName"
        android:layout_marginTop="28dp"
        android:text="@string/main_last"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B4226" />

    <EditText
        android:id="@+id/editLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:hint="@string/hint_last"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editLast"
        android:layout_marginTop="47dp"
        android:text="@string/phone_num"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B4226" />

    <EditText
        android:id="@+id/editPhone2"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button1"
        android:layout_below="@+id/textView3"
        android:hint="@string/phone_hint2"
        android:ems="10"
        android:inputType="phone"
        android:padding="10dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPhone3"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editPhone2"
        android:layout_alignBottom="@+id/editPhone2"
        android:layout_toRightOf="@+id/editPhone2"
        android:hint="@string/phone_hint3"
        android:ems="10"
        android:inputType="phone"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editPhone2"
        android:layout_alignBottom="@+id/editPhone2"
        android:layout_toLeftOf="@+id/editPhone2"
        android:ems="10"
        android:hint="@string/phone_hint1"
        android:inputType="phone"
        android:padding="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editPhone"
        android:layout_alignBottom="@+id/editPhone"
        android:layout_toLeftOf="@+id/editPhone"
        android:text="@string/one"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

</RelativeLayout>
