<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paperbg" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_top"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#6B4226"
        android:textSize="22dp" />

    <Button
        android:id="@+id/callnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/call_me"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/last_example"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="monospace" />

</RelativeLayout>